// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with data 1`] = `
<div>
  <h2>
    Projects
  </h2>
  <ul>
    <li>
      project-name
    </li>
  </ul>
  <h2>
    Logout
  </h2>
  <button
    onClick={[Function]}
    type="button"
  >
    Logout
  </button>
</div>
`;

exports[`<Jobs /> should render properly without data 1`] = `
<div>
  <h2>
    Projects
  </h2>
  Loading...
  <h2>
    Logout
  </h2>
  <button
    onClick={[Function]}
    type="button"
  >
    Logout
  </button>
</div>
`;
